Feature: add the ability to use Vault in development and production modes (#40)
Co-authored-by: Valentine Shatravenko <vshatravenko@heliostech.fr>

--- a/config/app.yml
+++ b/config/app.yml
@@ -17,6 +17,9 @@ images:
   postmaster: quay.io/openware/postmaster:2.3.4
 vendor:
   frontend: git@github.com:openware/baseapp.git
+vault:
+  mode: development
+  token: changeme
 storage:
   provider: "Google"
   bucketName: "opendax-barong-docs-bucket"
