Feature: add monitoring service

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 COMPOSE_PROJECT_NAME=microkube
-COMPOSE_FILE=compose/components-docs.yaml:compose/app.yaml:compose/backend.yaml:compose/gateway.yaml:compose/proxy.yaml:compose/daemons.yaml:compose/frontend.yaml:compose/cryptonodes.yaml:compose/arke.yaml:compose/superset.yaml
+COMPOSE_FILE=compose/components-docs.yaml:compose/app.yaml:compose/backend.yaml:compose/gateway.yaml:compose/proxy.yaml:compose/daemons.yaml:compose/frontend.yaml:compose/cryptonodes.yaml:compose/arke.yaml:compose/superset.yaml:compose/monitoring.yml
