--- a/config/app.yml
+++ b/config/app.yml
@@ -12,6 +12,8 @@ images:
   frontend: quay.io/openware/baseapp:2.3.20 # Check on quay.io/openware for latest tags
   tower: quay.io/openware/tower-lite:2.3.130
   postmaster: quay.io/openware/postmaster:2.3.5
+arke_proxy:
+  enabled: false
 vendor:
   frontend: git@github.com:openware/baseapp.git
 vault:
