--- a/config/app.yml
+++ b/config/app.yml
@@ -10,7 +10,7 @@ images:
   peatio: rubykube/peatio:2.3.43
   barong: rubykube/barong:2.3.36
   frontend: quay.io/openware/baseapp:2.3.20 # Check on quay.io/openware for latest tags
-  tower: quay.io/openware/tower-lite:2.3.130
+  tower: quay.io/openware/tower:2.3.130
   postmaster: quay.io/openware/postmaster:2.3.5
 arke_proxy:
   enabled: false
