--- a/templates/webhook.service
+++ b/templates/webhook.service
@@ -2,7 +2,7 @@
 Description=OpenDax Webhook service
 
 [Service]
-User=app
+User=deploy
 Environment="WEBHOOK_JWT_SECRET=GENERATED_HMAC_SECRET"
 ExecStart=/bin/bash -c "source ~/.rvm/scripts/rvm; bundle exec rackup config.ru"
 Type=simple
