--- a/config/app.yml
+++ b/config/app.yml
@@ -7,10 +7,10 @@ ssl:
   enabled: false    # Make sure to enable during deployment
   email: "support@example.com"
 images:
-  peatio: rubykube/peatio:2.3.43
-  barong: rubykube/barong:2.3.36
-  frontend: quay.io/openware/baseapp:2.3.20 # Check on quay.io/openware for latest tags
-  tower: quay.io/openware/tower:2.3.136-995a57c
+  peatio: quay.io/openware/peatio:2.3.47
+  barong: quay.io/openware/barong:2.3.45
+  frontend: quay.io/openware/baseapp:2.3.26 # Check on quay.io/openware/baseapp for latest tags
+  tower: quay.io/openware/tower:2.3.137
   postmaster: quay.io/openware/postmaster:2.3.5
 arke_proxy:
   enabled: false
