Enhancement: Update Barong configs to v2.4

--- a/config/app.yml
+++ b/config/app.yml
@@ -8,7 +8,7 @@ ssl:
   email: "support@example.com"
 images:
   peatio: quay.io/openware/peatio:2.3.47
-  barong: quay.io/openware/barong:2.3.45
+  barong: quay.io/openware/barong:2.4.0-a547f87
   frontend: quay.io/openware/baseapp:2.3.26 # Check on quay.io/openware/baseapp for latest tags
   tower: quay.io/openware/tower:2.3.137
   postmaster: quay.io/openware/postmaster:2.3.5
@@ -59,4 +59,3 @@ terraform:
   instance_name: "opendax-cloud"
   machine_type: "n1-standard-4"
   image: "debian-cloud/debian-9"
-
