--- a/config/app.yml
+++ b/config/app.yml
@@ -13,6 +13,9 @@ images:
   frontend: quay.io/openware/baseapp:2.3.26 # Check on quay.io/openware/baseapp for latest tags
   tower: quay.io/openware/tower:2.3.137
   postmaster: quay.io/openware/postmaster:2.3.5
+finex:
+  enabled: false
+  image: quay.io/openware/finex:2.4.0-98718c7
 arke_proxy:
   enabled: false
 vendor:
