Enhancement: Update captcha configs; Enable support for Geetest
* Add ability to configure CAPTCHA-protected endpoints

--- a/config/app.yml
+++ b/config/app.yml
@@ -28,7 +28,7 @@ twilio:
   phone_number: "+15005550000"
   account_sid: "changeme"
   auth_token: "changeme"
-recaptcha:
+captcha:
   type: "none"
   siteKey: "changeme"
   secretKey: "changeme"
