--- a/config/barong/barong.yml
+++ b/config/barong/barong.yml
@@ -16,3 +16,11 @@ document_types:
   - Utility Bill
   - Residental
   - Institutional
+user_storage_titles:
+# - personal  ## example
+# - company   ## example
+сaptcha_protected_endpoints: []
+# - user_create
+# - session_create
+# - password_reset
+# - email_confirmation
