--- a/config/app.yml
+++ b/config/app.yml
@@ -8,7 +8,7 @@ ssl:
   enabled: false    # Make sure to enable during deployment
   email: "support@example.com"
 images:
-  peatio: quay.io/openware/peatio:2.3.47
+  peatio: quay.io/openware/peatio:2.4.0-effbecb
   barong: quay.io/openware/barong:2.4.0-66599b5
   frontend: quay.io/openware/baseapp:2.3.26 # Check on quay.io/openware/baseapp for latest tags
   tower: quay.io/openware/tower:2.3.137
