--- a/config/app.yml
+++ b/config/app.yml
@@ -52,6 +52,22 @@ wallets:
     address: "changeme"
     max_balance: 1000.0
     secret: changeme
+bitcoind:
+  rpcuser: admin
+  rpcpassword: changeme
+  network: testnet
+  rpcport: 18332
+  port: 18333
+litecoind:
+  rpcuser: admin
+  rpcpassword: changeme
+  network: testnet
+  rpcport: 19332
+  port: 19335
+ardor:
+  rpcpassword: changeme
+  network: testnet
+  address: 0.0.0.0
 terraform:
   credentials: "~/safe/opendax.json"
   project: "example-opendax"
@@ -60,4 +76,5 @@ terraform:
   instance_name: "opendax-cloud"
   machine_type: "n1-standard-4"
   image: "debian-cloud/debian-9"
+
 
