Feature: Add flexible DB configuration
Co-authored-by: Valentine Shatravenko <vshatravenko@heliostech.fr>

--- a/config/app.yml
+++ b/config/app.yml
@@ -22,6 +22,11 @@ vendor:
   frontend: git@github.com:openware/baseapp.git
 vault:
   token: changeme
+database:
+  host: db
+  port: 3306
+  user: root
+  password: changeme
 storage:
   provider: "Google"
   bucketName: "opendax-barong-docs-bucket"
