Enhancement: Improve currency configuration files

--- a/config/app.yml
+++ b/config/app.yml
@@ -48,34 +48,53 @@ smtp:
   sender_email: noreply@postmaster.com
   sender_name: Postmaster
 wallets:
-  - kind: deposit
-    address: "changeme"
-    max_balance: 0.0
-    secret: changeme
-  - kind: hot
-    address: "changeme"
-    max_balance: 100.0
-    secret: changeme
-  - kind: warm
-    address: "changeme"
-    max_balance: 1000.0
-    secret: changeme
+  eth:
+    - kind: deposit
+      address: "changeme"
+      max_balance: 0.0
+      secret: changeme
+    - kind: hot
+      address: "changeme"
+      max_balance: 100.0
+      secret: changeme
+    - kind: warm
+      address: "changeme"
+      max_balance: 1000.0
+      secret: changeme
+  btc:
+    - kind: deposit
+      address: "changeme"
+      max_balance: 0.0
+    - kind: hot
+      address: "changeme"
+      max_balance: 100.0
+    - kind: warm
+      address: "changeme"
+      max_balance: 1000.0
+parity:
+  network: testnet
+  address: parity
+  rpcport: 8545
+  port: 30303
 bitcoind:
+  enabled: false
   rpcuser: admin
   rpcpassword: changeme
+  address: bitcoind
   network: testnet
   rpcport: 18332
   port: 18333
 litecoind:
   rpcuser: admin
   rpcpassword: changeme
+  address: litecoind
   network: testnet
   rpcport: 19332
   port: 19335
 ardor:
   rpcpassword: changeme
   network: testnet
-  address: 0.0.0.0
+  address: ardor
 terraform:
   credentials: "~/safe/opendax.json"
   project: "example-opendax"
