--- a/config/app.yml
+++ b/config/app.yml
@@ -8,10 +8,10 @@ ssl:
   enabled: false    # Make sure to enable during deployment
   email: "support@example.com"
 images:
-  peatio: quay.io/openware/peatio:2.4.0-effbecb
-  barong: quay.io/openware/barong:2.4.0-66599b5
-  frontend: quay.io/openware/baseapp:2.3.26 # Check on quay.io/openware/baseapp for latest tags
-  tower: quay.io/openware/tower:2.3.137
+  peatio: quay.io/openware/peatio:2.4.0-e55a1fc
+  barong: quay.io/openware/barong:2.4.0-d135e0a
+  frontend: quay.io/openware/baseapp:2.4.0-0b881ab # Check on quay.io/openware/baseapp for latest tags
+  tower: quay.io/openware/tower-lite:2.4.0-d904cac
   postmaster: quay.io/openware/postmaster:2.3.5
 finex:
   enabled: false
