Add gaTrackerKey to app.yml

--- a/config/app.yml
+++ b/config/app.yml
@@ -39,6 +39,7 @@ twilio:
   phone_number: "+15005550000"
   account_sid: "changeme"
   auth_token: "changeme"
+gaTrackerKey: ""
 captcha:
   type: "none"
   siteKey: "changeme"
