--- a/config/app.yml
+++ b/config/app.yml
@@ -9,10 +9,10 @@ ssl:
   enabled: false
   email: support@example.com
 images:
-  peatio: quay.io/openware/peatio:2.4.0-66aceba
-  barong: quay.io/openware/barong:2.4.0-7bce38f
-  frontend: quay.io/openware/baseapp:2.4.0-0b881ab
-  tower: quay.io/openware/tower-lite:2.4.0-d904cac
+  peatio: quay.io/openware/peatio:2.4.7
+  barong: quay.io/openware/barong:2.4.1
+  frontend: quay.io/openware/baseapp:2.4.0 # Check on quay.io/openware/baseapp for latest tags
+  tower: quay.io/openware/tower:2.4.1
 finex:
   enabled: false
   image: quay.io/openware/finex:2.4.0-5334683
