Feature: Add Kaigara support
* Run the blockchain using Kaigara by default
* Integrate Sonic
* Add sonic Traefik labels
* Add peatio values to secrets.yaml
* Enable Vault kv v2 secrets engine on secret/

--- a/config/app.yml
+++ b/config/app.yml
@@ -11,11 +11,12 @@ ssl:
   email: support@example.com
 updateVersions: false
 images:
-  peatio: quay.io/openware/peatio:2.6.28
-  barong: quay.io/openware/barong:2.6.19
+  peatio: quay.io/openware/peatio:2.6.29
+  barong: quay.io/openware/barong:2.7.0-17b26a4
   frontend: quay.io/openware/baseapp:2.6.5
   tower: quay.io/openware/tower:2.6.36
   rango: quay.io/openware/rango:2.6.1
+  sonic: quay.io/openware/baseapp:sonic
 finex:
   enabled: false
   image: quay.io/openware/finex:2.6.12
