--- a/config/barong/authz_rules.yml
+++ b/config/barong/authz_rules.yml
@@ -13,6 +13,7 @@ rules:
     - api/v2/applogic/public
     - api/v2/arke/public
     - api/v2/finex/public
+    - api/v2/sonic/public
   block:
     - api/v2/barong/management
     - api/v2/peatio/management
