Feature: Add 2.5 component versions and config file updates

--- a/config/barong/seeds.yml
+++ b/config/barong/seeds.yml
@@ -28,6 +28,14 @@ levels:
     value: verified
     description: "User personal documents have been verified"
 
+restrictions: {}
+# - { category: whitelist, scope: country, value: UA, state: disabled }
+# - { category: maintenance, scope: all, value: all, state: disabled }
+# - { category: blacklist, scope: ip, value: 164.116.47.255, state: disabled, code: 433 }
+# - { category: blacklist, scope: ip_subnet, value: 164.116.47.0/24, state: disabled, code: 434 }
+# - { category: blacklist, scope: country, value: USA, state: disabled, code: 435 }
+# - { category: blacklist, scope: continent, value: SA, state: disabled, code: 436 }
+
 permissions:
 # SUPER ADMIN has an access to the whole system without any limits
 # so we can just grant him access to /api/v2/*
