--- a/config/app.yml
+++ b/config/app.yml
@@ -9,13 +9,13 @@ ssl:
   enabled: false
   email: support@example.com
 images:
-  peatio: quay.io/openware/peatio:2.4.7
-  barong: quay.io/openware/barong:2.4.1
-  frontend: quay.io/openware/baseapp:2.4.0 # Check on quay.io/openware/baseapp for latest tags
-  tower: quay.io/openware/tower:2.4.1
+  peatio: quay.io/openware/peatio:2.5.12
+  barong: quay.io/openware/barong:2.5.4
+  frontend: quay.io/openware/baseapp:2.4.0-64f97d9
+  tower: quay.io/openware/tower:2.5.0-36d724e
 finex:
   enabled: false
-  image: quay.io/openware/finex:2.4.0-5334683
+  image: quay.io/openware/finex:2.5.4
 vendor:
   frontend: git@github.com:openware/baseapp.git
 vault:
