Enhancement: Use appropriate words

--- a/config/barong/authz_rules.yml
+++ b/config/barong/authz_rules.yml
@@ -1,6 +1,6 @@
 #
-# pass for whitelisted (public) routes
-# block for blacklisted routes
+# pass for allowlisted (public) routes
+# block for denylisted routes
 #
 rules:
   pass:
