--- a/config/app.yml
+++ b/config/app.yml
@@ -9,11 +9,11 @@ ssl:
   enabled: false
   email: support@example.com
 images:
-  peatio: quay.io/openware/peatio:2.5.12
-  barong: quay.io/openware/barong:2.5.4
-  frontend: quay.io/openware/baseapp:2.5.0
-  tower: quay.io/openware/tower:2.5.0
-  rango: quay.io/openware/rango:2.5.0
+  peatio: quay.io/openware/peatio:2.6.0-0f60e12
+  barong: quay.io/openware/barong:2.6.0-48b0578
+  frontend: quay.io/openware/baseapp:2.5.1
+  tower: quay.io/openware/tower:2.5.12
+  rango: quay.io/openware/rango:2.6.0-e02b329
 finex:
   enabled: false
   image: quay.io/openware/finex:2.6.0-dd96848
