--- a/config/app.yml
+++ b/config/app.yml
@@ -13,6 +13,7 @@ images:
   barong: quay.io/openware/barong:2.4.12
   frontend: quay.io/openware/baseapp:2.4.1 # Check on quay.io/openware/baseapp for latest tags
   tower: quay.io/openware/tower:2.4.5
+  rango: quay.io/openware/rango:2.4.3
 finex:
   enabled: false
   image: quay.io/openware/finex:2.4.0-5334683
