--- a/config/app.yml
+++ b/config/app.yml
@@ -9,11 +9,11 @@ ssl:
   enabled: false
   email: support@example.com
 images:
-  peatio: quay.io/openware/peatio:2.6.0-ecbdaf8
-  barong: quay.io/openware/barong:2.6.0
-  frontend: quay.io/openware/baseapp:2.6.0-c0e5a82
-  tower: quay.io/openware/tower:2.6.0-95a4b5a
-  rango: quay.io/openware/rango:2.6.0-e02b329
+  peatio: quay.io/openware/peatio:2.5.12
+  barong: quay.io/openware/barong:2.5.4
+  frontend: quay.io/openware/baseapp:2.5.0
+  tower: quay.io/openware/tower:2.5.0
+  rango: quay.io/openware/rango:2.5.0
 finex:
   enabled: false
   image: quay.io/openware/finex:2.6.0-dd96848
