--- a/config/barong/authz_rules.yml
+++ b/config/barong/authz_rules.yml
@@ -4,6 +4,7 @@
 #
 rules:
   pass:
+    - api/v2/barong/public
     - api/v2/barong/identity
     - api/v2/peatio/public
     - api/v2/ranger/public
