--- a/config/barong/barong.yml
+++ b/config/barong/barong.yml
@@ -16,6 +16,7 @@ document_types:
   - Utility Bill
   - Residental
   - Institutional
+  - Address
 user_storage_titles:
 # - personal  ## example
 # - company   ## example
