--- a/config/barong/seeds.yml
+++ b/config/barong/seeds.yml
@@ -76,6 +76,7 @@ permissions:
  - { role: accountant, verb: put, path: api/v2/barong/admin/users/labels, action: drop }
  # ranger access
  - { role: accountant, verb: get, path: api/v2/ranger, action: accept }
+ - { role: accountant, verb: get, path: api/v2/open_finance, action: accept }
  # accountant doesnt have access to manage platform roles and permissions
  - { role: accountant, verb: all, path: api/v2/barong/admin/permissions, action: drop }
  # we are watching after you 0_0
@@ -100,6 +101,7 @@ permissions:
  - { role: compliance, verb: get, path: assets, action: accept }
  # ranger access
  - { role: compliance, verb: get, path: api/v2/ranger, action: accept }
+ - { role: compliance, verb: get, path: api/v2/open_finance, action: accept }
  # compliance doesnt have access to manage platform roles and permissions
  - { role: compliance, verb: all, path: api/v2/barong/admin/permissions, action: drop }
  # we are watching after you 0_0
@@ -117,6 +119,7 @@ permissions:
 
  # ranger access
  - { role: technical, verb: get, path: api/v2/ranger, action: accept }
+ - { role: technical, verb: get, path: api/v2/open_finance, action: accept }
  # technical doesnt have access to manage platform roles and permissions
  - { role: technical, verb: all, path: api/v2/barong/admin/permissions, action: drop }
  # we are watching after you 0_0
@@ -148,6 +151,7 @@ permissions:
  - { role: trader, verb: all, path: api/v2/resource, action: accept }
  # ranger access
  - { role: trader, verb: get, path: api/v2/ranger, action: accept }
+ - { role: trader, verb: get, path: api/v2/open_finance, action: accept }
 
  # MEMBER
  # has standard user permissions to ACCOUNT, MARKET, RESOURCE modules
@@ -157,6 +161,7 @@ permissions:
  - { role: member, verb: all, path: api/v2/resource, action: accept }
  # ranger access
  - { role: member, verb: get, path: api/v2/ranger, action: accept }
+ - { role: member, verb: get, path: api/v2/open_finance, action: accept }
 
  # BROKER
  # has standard user permissions to ACCOUNT, MARKET, RESOURCE modules
@@ -166,3 +171,6 @@ permissions:
  - { role: broker, verb: all, path: api/v2/resource, action: accept }
  # ranger access
  - { role: broker, verb: get, path: api/v2/ranger, action: accept }
+ - { role: broker, verb: get, path: api/v2/open_finance, action: accept }
+
+restrictions: {}
