--- a/config/app.yml
+++ b/config/app.yml
@@ -9,10 +9,10 @@ ssl:
   enabled: false
   email: support@example.com
 images:
-  peatio: quay.io/openware/peatio:2.6.0-a2f27bb
-  barong: quay.io/openware/barong:2.6.1
+  peatio: quay.io/openware/peatio:2.6.3
+  barong: quay.io/openware/barong:2.6.2
   frontend: quay.io/openware/baseapp:2.6.1
-  tower: quay.io/openware/tower:2.6.25
+  tower: quay.io/openware/tower:2.6.28
   rango: quay.io/openware/rango:2.6.0
 finex:
   enabled: false
