Feature: Add rake task to load Vault policies (#266)

--- a/config/app.yml
+++ b/config/app.yml
@@ -28,7 +28,13 @@ kyc:
   sandbox_mode: true
   api_endpoint: https://api.kycaid.com/
 vault:
-  token: changeme
+  root_token: changeme
+  peatio_rails_token: changeme
+  peatio_crypto_token: changeme
+  peatio_upstream_token: changeme
+  peatio_matching_token: changeme
+  barong_token: changeme
+  finex_engine_token: changeme
 database:
   host: db
   adapter: mysql
