--- a/config/app.yml
+++ b/config/app.yml
@@ -13,10 +13,10 @@ updateVersions: false
 images:
   peatio: quay.io/openware/peatio:2.6.29
   barong: quay.io/openware/barong:2.7.0-17b26a4
-  frontend: quay.io/openware/baseapp:2.6.5
-  tower: quay.io/openware/tower:2.6.36
-  rango: quay.io/openware/rango:2.6.1
-  sonic: quay.io/openware/baseapp:sonic
+  frontend: quay.io/openware/baseapp:4e87f25
+  tower: quay.io/openware/tower:855fe3c
+  rango: quay.io/openware/rango:2.6.0-1ecb85b
+  sonic: quay.io/openware/baseapp:4e87f25
 finex:
   enabled: false
   image: quay.io/openware/finex:2.6.12
