Enhancement: Integrate kaigara & sonic Vault changes

--- a/config/app.yml
+++ b/config/app.yml
@@ -36,6 +36,8 @@ vault:
   peatio_matching_token: changeme
   barong_token: changeme
   finex_engine_token: changeme
+  kaigara: changeme
+  sonic: changeme
 database:
   host: db
   adapter: mysql
