--- a/config/app.yml
+++ b/config/app.yml
@@ -12,7 +12,7 @@ ssl:
 updateVersions: false
 images:
   peatio: quay.io/openware/peatio:2.6.29
-  barong: quay.io/openware/barong:2.7.0-17b26a4
+  barong: quay.io/openware/barong:2.6.0-c563225
   frontend: quay.io/openware/baseapp:4e87f25
   tower: quay.io/openware/tower:855fe3c
   rango: quay.io/openware/rango:2.6.0-1ecb85b
@@ -36,8 +36,8 @@ vault:
   peatio_matching_token: changeme
   barong_token: changeme
   finex_engine_token: changeme
-  kaigara: changeme
-  sonic: changeme
+  kaigara_token: changeme
+  sonic_token: changeme
 database:
   host: db
   adapter: mysql
