--- a/config/app.yml
+++ b/config/app.yml
@@ -11,16 +11,12 @@ ssl:
   email: support@example.com
 updateVersions: false
 images:
-  peatio: quay.io/openware/peatio:2.6.29
+  peatio: quay.io/openware/peatio:2.6.0-8f4311c
   barong: quay.io/openware/barong:2.6.0-c563225
-  frontend: quay.io/openware/baseapp:4e87f25
-  tower: quay.io/openware/tower:855fe3c
+  sonic: quay.io/openware/baseapp:2.6.0-e1bcbaae
+  tower: quay.io/openware/tower:3.0.0-ccde1dd
   rango: quay.io/openware/rango:2.6.0-1ecb85b
-  sonic: quay.io/openware/baseapp:4e87f25
-finex:
-  enabled: false
-  image: quay.io/openware/finex:2.6.12
-  license_key: changeme
+  finex: quay.io/openware/openfinex:2.7.0-3acdefe
 vendor:
   frontend: git@github.com:openware/baseapp.git
 kyc:
