Enhancement: Update OpenDAX address and public key

--- a/config/app.yml
+++ b/config/app.yml
@@ -4,6 +4,7 @@ app:
   domain: app.local
   subdomain: www
   show_landing: true
+  opendax_addr: https://www.opendax.cloud
 render_protect: false
 csrfEnabled: false
 ssl:
