--- a/config/app.yml
+++ b/config/app.yml
@@ -12,9 +12,9 @@ ssl:
   email: support@example.com
 updateVersions: false
 images:
-  peatio: quay.io/openware/peatio:2.6.0-8f4311c
-  barong: quay.io/openware/barong:2.6.0-c563225
-  sonic: quay.io/openware/baseapp:3.0.0-1ef7a427
+  peatio: quay.io/openware/peatio:2.6.43
+  barong: quay.io/openware/barong:2.6.37
+  sonic: quay.io/openware/baseapp:3.0.0-55078ed3
   tower: quay.io/openware/tower:3.0.0-ccde1dd
   rango: quay.io/openware/rango:2.6.0-1ecb85b
   finex: quay.io/openware/openfinex:3.0.0-d66ed57
