--- a/config/app.yml
+++ b/config/app.yml
@@ -14,8 +14,8 @@ updateVersions: false
 images:
   peatio: quay.io/openware/peatio:2.6.43
   barong: quay.io/openware/barong:2.6.37
-  sonic: quay.io/openware/baseapp:3.0.0-55078ed3
-  tower: quay.io/openware/tower:3.0.0-ccde1dd
+  sonic: quay.io/openware/baseapp:3.0.0-b7304ae9
+  tower: quay.io/openware/tower:a4d418d
   rango: quay.io/openware/rango:2.6.0-1ecb85b
   finex: quay.io/openware/openfinex:3.0.0-d66ed57
 vendor:
