--- a/config/app.yml
+++ b/config/app.yml
@@ -12,12 +12,12 @@ ssl:
   email: support@example.com
 updateVersions: false
 images:
-  peatio: quay.io/openware/peatio:2.6.44
-  barong: quay.io/openware/barong:2.6.37
-  sonic: quay.io/openware/baseapp:3.0.0-2653973e
-  tower: quay.io/openware/tower:a4d418d
-  rango: quay.io/openware/rango:2.6.0-1ecb85b
-  finex: quay.io/openware/openfinex:3.0.0-d66ed57
+  peatio: quay.io/openware/peatio:3.0.2
+  barong: quay.io/openware/barong:3.0.5
+  sonic: quay.io/openware/baseapp:3.0.7
+  tower: quay.io/openware/tower:3.0.6
+  rango: quay.io/openware/rango:2.7.0-2c38d65
+  finex: quay.io/openware/openfinex:3.0.0-74d3b52
 vendor:
   frontend: git@github.com:openware/baseapp.git
 kyc:
