--- a/config/app.yml
+++ b/config/app.yml
@@ -5,6 +5,7 @@ app:
   subdomain: www
   show_landing: true
   opendax_addr: https://www.opendax.cloud
+  wizard_enabled: false
 render_protect: false
 csrfEnabled: false
 ssl:
@@ -26,15 +27,15 @@ kyc:
   sandbox_mode: true
   api_endpoint: https://api.kycaid.com/
 vault:
-  root_token: changeme
-  peatio_rails_token: changeme
-  peatio_crypto_token: changeme
-  peatio_upstream_token: changeme
-  peatio_matching_token: changeme
-  barong_token: changeme
-  finex_engine_token: changeme
-  kaigara_token: changeme
-  sonic_token: changeme
+  root_token: s.OpW0UoXyQIOQoQLHCQezfLe6
+  peatio_rails_token: s.PUAa51M6tKaFF52QISnFAf0P
+  peatio_crypto_token: s.OeAISG7HJfjIrC1fbVlkC3hW
+  peatio_upstream_token: s.PmGxYY7kMY2SFPS7p37514bM
+  peatio_matching_token: s.q5mAWv8i8EuDI1dsY1RzVMwc
+  barong_token: s.ltdDvAQxGqVKYC7IPGkMZSQg
+  finex_engine_token: s.rEOUdl2jOu333JqWH5E5A3Oy
+  kaigara_token: s.zV7NuqMzbeQApBT3fZjMXKkp
+  sonic_token: s.LiINVGoRb2XzEGUN7r7ppXiw
 database:
   host: db
   adapter: mysql
