--- a/config/app.yml
+++ b/config/app.yml
@@ -15,7 +15,7 @@ updateVersions: false
 images:
   peatio: quay.io/openware/peatio:3.0.13
   barong: quay.io/openware/barong:3.0.5
-  sonic: quay.io/openware/baseapp:d61d0626
+  sonic: quay.io/openware/baseapp:3.0.61
   tower: quay.io/openware/tower:3.0.44
   rango: quay.io/openware/rango:3.0.1
   finex: quay.io/openware/openfinex:3.0.0-74d3b52
